--- a/About/Changelog.txt
+++ b/About/Changelog.txt
@@ -1,5 +1,8 @@
 # Changelog for CombatPowerTweaker
 
+1.0.4.0 - New version of 1SettingsHelper
+
+
 1.0.3.0 - Mod updated for 1.3 and passed autotests
 
 
