--- a/About/Changelog.txt
+++ b/About/Changelog.txt
@@ -1,5 +1,8 @@
 # Changelog for CombatPowerTweaker
 
+1.3.1 - Fixed issue with removed pawnkind. Added search to options
+
+
 1.0.4.0 - New version of 1SettingsHelper
 
 
