--- a/About/Changelog.txt
+++ b/About/Changelog.txt
@@ -1,5 +1,8 @@
 # Changelog for CombatPowerTweaker
 
+1.3.2 - Opened the setting-strings for translation
+
+
 1.3.1 - Fixed issue with removed pawnkind. Added search to options
 
 
