Mod updated for 1.4 and passed autotests. Used DeepL to update translations for ChineseSimplified, French, German, Russian

--- a/Languages/English/Keyed/Keys.xml
+++ b/Languages/English/Keyed/Keys.xml
@@ -8,4 +8,5 @@
   <CPT.percentdown.label>Decrease all values by 10%</CPT.percentdown.label>
   <CPT.percentdown.button>-10%</CPT.percentdown.button>
   <CPT.search.label>Search</CPT.search.label>
+  <CPT.modversion.label>Installed mod-version: {0}</CPT.modversion.label>
 </LanguageData>
