--- a/About/Changelog.txt
+++ b/About/Changelog.txt
@@ -1,5 +1,9 @@
 # Changelog for CombatPowerTweaker
 
+1.4.1 - Mod updated for 1.4 and passed autotests.
+Used DeepL to update translations for ChineseSimplified, French, German, Russian
+
+
 1.3.2 - Opened the setting-strings for translation
 
 
