--- a/About/Changelog.txt
+++ b/About/Changelog.txt
@@ -1,5 +1,8 @@
 # Changelog for CombatPowerTweaker
 
+1.5.0 - Mod updated for 1.5 and passed autotests
+
+
 1.4.2 - Made the value-change a bit more clear
 
 
