Mod updated for 1.6 and passed autotests

--- a/Languages/English/Keyed/Keys.xml
+++ b/Languages/English/Keyed/Keys.xml
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <LanguageData>
   <CPT.combatpower.label>Combat power, vanilla value in parenthesis</CPT.combatpower.label>
   <CPT.reset.label>Reset all to vanilla</CPT.reset.label>
